envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001

static_resources:

  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http
                upgrade_configs:
                  - upgrade_type: websocket
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                route_config:
                  name: rc01
                  virtual_hosts:
                    - name: vh01
                      domains:
                        - "*"
                      routes:
                        - name: retry-route
                          match:
                            prefix: /
                            headers:
                              - name: "enable-retry"
                                exact_match: "y"
                          route:
                            cluster: envoy_rest_server
                            retry_policy:
                              retry_on: "connect-failure,refused-stream,reset,gateway-error"
                              num_retries: 3
                              per_try_timeout: 0.5s

                        - name: timeout-route
                          match:
                            prefix: /
                            headers:
                              - name: "enable-timeout"
                                exact_match: "y"
                          route:
                            cluster: envoy_rest_server
                            timeout: 0.5s

                        - name: default_route
                          match:
                            prefix: /
                          route:
                            cluster: envoy_rest_server

                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: envoy_rest_server
      connect_timeout: 0.25s

      outlier_detection:
        consecutive_5xx: 3
        interval: 10s
        max_ejection_time: 300s
        base_ejection_time: 30s
        max_ejection_percent: 100
        success_rate_request_volume: 10
        failure_percentage_threshold: 30

      type: STATIC
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: envoy_rest_server
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 192.168.0.35
                      port_value: 18081
